--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,13 +15,35 @@ spring:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     show-sql: true
 
-  security:
-    oauth2:
-      client:
-        registration:
-          google:
-            client-id: 871105634916-3lrq2p8qouavsdm64g9tv5tan82rbe0t.apps.googleusercontent.com
-            client-secret: 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
-            scope:
-            - email
-            - profile
+  # security:
+  #   oauth2:
+  #     client:
+  #       registration:
+  #         google:
+  #           client-id: 871105634916-3lrq2p8qouavsdm64g9tv5tan82rbe0t.apps.googleusercontent.com
+  #           client-secret: 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
+  #           scope:
+  #           - email
+  #           - profile
+  #         facebook:
+  #           client-id: 머시기
+  #           client-secret: 머시기
+  #           scope:
+  #           - email
+  #           - public_profile
+  #         naver:
+  #           client-id: 머시기
+  #           client-secret: 머시기
+  #           scope:
+  #           - name
+  #           - email
+  #           - profile_image
+  #           client-name: Naver # 클라이언트 네임은 구글 페이스북도 대문자로 시작하더라.
+  #           authorization-grant-type: authorization_code
+  #           redirect-uri: http://localhost:8080/login/oauth2/code/naver
+  #       provider:
+  #         naver:
+  #           authorization-uri: https://nid.naver.com/oauth2.0/authorize
+  #           token-uri: https://nid.naver.com/oauth2.0/token
+  #           user-info-uri: https://openapi.naver.com/v1/nid/me
+  #           user-name-attribute: response # 회원정보를 json의 response 키값으로 리턴해줌.
