--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,16 +15,16 @@ spring:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     show-sql: true
 
-  # security:
-  #   oauth2:
-  #     client:
-  #       registration:
-  #         google:
-  #           client-id: 871105634916-3lrq2p8qouavsdm64g9tv5tan82rbe0t.apps.googleusercontent.com
-  #           client-secret: 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
-  #           scope:
-  #           - email
-  #           - profile
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: 82938518176-2dcn7kkls0efpqg25tsgv9f8kr3f9ova.apps.googleusercontent.com
+            client-secret: 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
+            scope:
+            - email
+            - profile
   #         facebook:
   #           client-id: 머시기
   #           client-secret: 머시기
